--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "cute-chat",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://ramoneitor439.github.io/rosio-store",
   "type": "module",
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
@@ -26,6 +29,7 @@
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
